--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,9 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Texas Holdem</title>
-    <meta name="google-signin-client_id" content="1043060822626-3meb92dmg0vnhkogedh26o60gvvl70sq.apps.googleusercontent.com">
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <title>Poker Chips</title>
+<!--    <meta name="google-signin-client_id" content="1043060822626-3meb92dmg0vnhkogedh26o60gvvl70sq.apps.googleusercontent.com">-->
+<!--    <script src="https://apis.google.com/js/platform.js" async defer></script>-->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
